--- a/app/views/settings/user_preferences.html.haml
+++ b/app/views/settings/user_preferences.html.haml
@@ -8,5 +8,6 @@
       %section
         = render ReactComponents::Settings::UserPreferencesForm.new
 
-      %section
-        = render ReactComponents::Settings::ThemePreferenceForm.new
+      - if current_user.insider?
+        %section
+          = render ReactComponents::Settings::ThemePreferenceForm.new
