Add missing filters, make contrast better, tab colors, purple's dark variant, etc

--- a/app/css/components/notification.css
+++ b/app/css/components/notification.css
@@ -45,7 +45,8 @@
         & .--count {
             @apply invisible;
             &:after {
-                @apply absolute bg-red rounded-circle;
+                background: var(--backgroundColorNotificationsCount);
+                @apply absolute rounded-circle;
                 @apply visible;
 
                 content: "";
