--- a/app/css/pages/mentoring/testimonials.css
+++ b/app/css/pages/mentoring/testimonials.css
@@ -104,8 +104,10 @@
                 }
             }
             & .new {
+                background: var(--backgroundColorMentorTestimonialsNew);
+                color: var(--textColorMentorTestimonialsNew);
                 @apply ml-24;
-                @apply bg-lightGold rounded-3;
+                @apply rounded-3;
                 @apply text-12 leading-140 font-mono font-bold uppercase;
                 @apply py-4 px-8;
             }
