--- a/app/css/pages/track-about.css
+++ b/app/css/pages/track-about.css
@@ -22,7 +22,7 @@
                 max-width: 780px;
 
                 & strong {
-                    @apply text-textColor3 font-semibold;
+                    @apply text-textColor1 font-semibold;
                 }
             }
         }
@@ -68,7 +68,7 @@
     }
 
     & .about-section {
-        @apply bg-backgroundColorA;
+        @apply bg-backgroundColorB;
         @apply pt-40;
         & .inner {
             @apply pb-64;
@@ -173,7 +173,7 @@
     }
 
     & .exercises-section {
-        @apply bg-backgroundColorA;
+        @apply bg-backgroundColorB;
         @apply pb-80;
 
         & .inner {
@@ -224,13 +224,18 @@
                 @apply ml-80;
                 max-width: 640px;
                 width: 50%;
+                mask-image: linear-gradient(
+                    to right,
+                    rgba(0, 0, 0, 1) 10%,
+                    transparent 95%
+                );
             }
         }
     }
     & .features-section {
         background: linear-gradient(
             180deg,
-            var(--backgroundColorA) 80%,
+            var(--backgroundColorB) 80%,
             var(--backgroundColorB) 100%
         );
         /* background: linear-gradient(180deg, #ffffff 80%, #fbfbff 100%); */
@@ -307,7 +312,7 @@
         }
     }
     & .concepts-section {
-        @apply bg-backgroundColorA;
+        @apply bg-backgroundColorB;
         @apply py-64;
 
         & .container {
@@ -326,7 +331,7 @@
     }
     & .upsell-section {
         background: linear-gradient(
-            var(--backgroundColorA),
+            var(--backgroundColorB),
             var(--backgroundColorB)
         );
         @apply pt-64;
@@ -346,6 +351,7 @@
                     height: 48px;
                     width: 48px;
                     @apply mb-12;
+                    @apply filter-textColor1;
                 }
                 & h3 {
                     @apply text-h2 mb-12;
