Copy text color, removing backgrounds in darkmode, difficulty tags, more better contrasts

--- a/app/css/components/difficulty-tag.css
+++ b/app/css/components/difficulty-tag.css
@@ -12,18 +12,21 @@
         & .icon {
             @apply bg-easy;
         }
-        @apply text-easy border-easy bg-easyLight;
+        @apply text-easy border-easy;
+        background: var(--backgroundColorEasyTag);
     }
     &.--medium {
         & .icon {
             @apply bg-medium;
         }
-        @apply text-medium border-medium bg-mediumLight;
+        @apply text-medium border-medium;
+        background: var(--backgroundColorMediumTag);
     }
     &.--hard {
         & .icon {
             @apply bg-hard;
         }
-        @apply text-hard border-hard bg-hardLight;
+        @apply text-hard border-hard;
+        background: var(--backgroundColorMediumTag);
     }
 }
