--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -1,5 +1,5 @@
 #page-donate
-  - link_class = "underline hover:text-lightBlue"
+  - link_class = "underline hover:text-prominentLinkColor"
   %header.pt-24.pd:mt-40.md:shadow-lgZ1
     .lg-container.flex.flex-col.items-center.c-shapes
       = graphical_icon "community-with-exercism-logo", category: :graphics
@@ -86,7 +86,7 @@
             .text-prose.text-textColor5
               Does your company support not-for-profits or charities? Do you have a matched giving scheme at work? We&apos;d love to chat to you to understand how your company could support us. Please
               drop us an email at
-              = link_to "fundraising@exercism.org", "mailto:fundraising@exercism.org", class: "text-lightBlue font-medium underline"
+              = link_to "fundraising@exercism.org", "mailto:fundraising@exercism.org", class: "text-prominentLinkColor font-medium underline"
               and we'll explore further!
 
         .flex.flex-row.shadow-base.p-24.rounded-16.bg-backgroundColorA.mb-16
@@ -95,10 +95,10 @@
             .text-h4.mb-4 Love Exercism? Tell others about us!
             .text-prose.text-textColor5
               Follow us on
-              = link_to 'Twitter,', 'https://twitter.com/exercism_io', target: "_blank", rel: 'noreferrer', class: "text-lightBlue font-medium underline"
-              = link_to 'GitHub', 'https://github.com/exercism', target: "_blank", rel: 'noreferrer', class: "text-lightBlue font-medium underline"
+              = link_to 'Twitter,', 'https://twitter.com/exercism_io', target: "_blank", rel: 'noreferrer', class: "text-prominentLinkColor font-medium underline"
+              = link_to 'GitHub', 'https://github.com/exercism', target: "_blank", rel: 'noreferrer', class: "text-prominentLinkColor font-medium underline"
               and
-              = link_to 'LinkedIn', 'https://www.linkedin.com/company/exercism/', target: "_blank", rel: 'noreferrer', class: "text-lightBlue font-medium underline"
+              = link_to 'LinkedIn', 'https://www.linkedin.com/company/exercism/', target: "_blank", rel: 'noreferrer', class: "text-prominentLinkColor font-medium underline"
               then share our posts, and create your own! We try to share everything we see 🙂
 
 
