--- a/app/views/donations/_alternatives.html.haml
+++ b/app/views/donations/_alternatives.html.haml
@@ -2,11 +2,11 @@
   %h2.text-h5.mb-4 Looking for another payment provider?
   %p.text-p-base.mb-8 We currently support Paypal and GitHub Sponsors as alternative payment providers. Please contact #{link_to 'Loretta', 'mailto:loretta@exercism.org'} if there is another provider you feel we should add.
   .flex.flex-col.items-start.gap-12
-    = link_to "https://www.paypal.com/donate/?hosted_button_id=KDRW2GL6FVVFS", class: "btn-m btn-secondary bg-white" do
+    = link_to "https://www.paypal.com/donate/?hosted_button_id=KDRW2GL6FVVFS", class: "btn-m btn-secondary" do
       = graphical_icon "paypal", category: :graphics, css_class: "!filter-none"
       %span Donate with Paypal
-    = link_to "https://github.com/sponsors/exercism", class: "btn-m btn-secondary bg-white" do
-      = graphical_icon "external-site-github", css_class: "!filter-none"
+    = link_to "https://github.com/sponsors/exercism", class: "btn-m btn-secondary" do
+      = graphical_icon "external-site-github"
       %span Donate via GitHub Sponsors
 
   %h2.text-h5.mt-24.mb-4 Too cool for fiat? Donate using crypto!
