Adjustments, adding missing filters, etc

--- a/app/css/components/exercise-status-tag.css
+++ b/app/css/components/exercise-status-tag.css
@@ -38,7 +38,8 @@
     }
     &.--completed,
     &.--published {
-        @apply border-darkGreen bg-veryLightGreen2;
+        @apply border-darkGreen;
+        background: var(--backgroundColorConceptMastered);
         @apply text-everyoneLovesAGreen;
 
         &:before {
