--- a/app/css/components/exercise-header.css
+++ b/app/css/components/exercise-header.css
@@ -22,7 +22,7 @@
         @apply mb-24;
     }
     & .update-bar {
-        @apply bg-lightOrange;
+        background: var(--backgroundColorCAlert);
         @apply border-2 border-lightGold rounded-8;
         @apply py-10 px-24;
         @apply text-textColor2 text-16 leading-160 font-semibold;
@@ -35,7 +35,7 @@
         }
 
         & .faux-link {
-            @apply text-lightBlue ml-auto;
+            @apply text-prominentLinkColor ml-auto;
         }
     }
 
