--- a/app/views/profiles/_header.html.haml
+++ b/app/views/profiles/_header.html.haml
@@ -4,7 +4,7 @@
       = avatar(user)
       .info
         .heading
-          %h1= render ViewComponents::HandleWithFlair.new(user.handle, user&.flair, size: 31)
+          %h1= render ViewComponents::HandleWithFlair.new(user.handle, user.flair, size: 31)
           = render ViewComponents::Reputation.new(number_with_delimiter(user.reputation), flashy: true)
           .tracks
             - top_three_tracks.each do |track|
