--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -5,7 +5,7 @@
     .lg-container.container
       = avatar(current_user)
       .info
-        .handle= render ViewComponents::HandleWithFlair.new(current_user.handle, current_user.flair, size: 18)
+        .handle= render ViewComponents::HandleWithFlair.new(current_user.handle, current_user.flair)
         .extra= current_user.name
       / TODO: Add tests for this
       = link_to badges_journey_path(anchor: "journey-content") do
@@ -31,7 +31,7 @@
         .content
           %h1.flex
             Welcome back,&nbsp;
-            = render ViewComponents::HandleWithFlair.new(current_user.handle, current_user.flair, size: 32)
+            = render ViewComponents::HandleWithFlair.new(current_user.handle, current_user.flair, size: :xlarge)
             !
           %p.welcome
             Solve coding exercises and get mentored to develop fluency in your chosen programming languages.
