--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -5,7 +5,7 @@
     .lg-container.container
       = avatar(current_user)
       .info
-        .handle= render ViewComponents::HandleWithFlair.new(current_user.handle, current_user.flair)
+        .handle= render ViewComponents::HandleWithFlair.new(current_user.handle, current_user.flair, size: :medium)
         .extra= current_user.name
       / TODO: Add tests for this
       = link_to badges_journey_path(anchor: "journey-content") do
