Show insider tag

--- a/app/views/profiles/_header.html.haml
+++ b/app/views/profiles/_header.html.haml
@@ -39,7 +39,7 @@
                   .c-badge-medallion{ class: "--#{badge.rarity}" }
                     = icon(badge.icon, "Badge: #{badge.name}")
 
-        - if user.roles.present?
+        - if header_tags.present? || user.founder?
           .tags
             - if user.founder?
               .tag.founder
