Add Insiders tag on profile page (#3676)
* Build algorithm

* Add insiders_status field to users table

* Symbolize insiders_status

* Add command to update insiders_status

* Add commands for granting and revoking access

* Add joined insiders email

* Add activate insiders command

* Recheck active insiders job

* Check insiders status when subscription changes

* Trigger when roles change

* Trigger when reputation changes

* Trigger when reputation changes

* Add unset

* Rename

* Refactor

* Rename command

* Update from commands

* Remove after_commit trigger

* Move command

* Add missing file

* Add notifications for lifetime insiders and expired insiders

* Various tweaks and improvemnets

* Support feature flag for insiders (#3666)

[skip ci]

* Setup project

* Add header and features content and raw spacement

* Finish basic styling

* We're aiming font-medium

* Add pixel decorations

* Update announcement-bar, site-header

* Update signed off header

* Adjust site header icons and filters

* Update site footer

* Add color instead of none

* Remove hidden box-shadow

* Add insiders status prompt (#3671)

* Add react component

* Add API endpoint

* Fetch data

* Add youtube video

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* CSS Tweaks

* Tweak copy

* Fix tests

* Pipe things together

* Various more tweaks

* Add locks

* Fix locks

* Add notifications for joining

* Enable tests

* Fix issue with unset overwriting status

* Tweak logic

* Send notification when becoming eligible

* Update more notifications

* Add insider tag

* Add back founder tag

* Add correct check for insider tag

* Remove unused files

* Move logic to helper

* Move logic to helper

* Show insider tag

* Add feature flag

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>
Co-authored-by: Erik Schierboom <erik_schi

--- a/app/css/pages/insiders.css
+++ b/app/css/pages/insiders.css
@@ -1,6 +1,6 @@
 #page-insiders {
+    @apply bg-darkBlueViolet;
     @apply pt-20 md:pt-48 pb-64;
-    background-color: #282339;
     color: #cbc9d9;
 
     h1,
@@ -37,8 +37,7 @@
                 @apply mb-12 relative;
             }
             box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.15);
-            background-color: #302b42;
-            @apply py-20 px-24 rounded-16;
+            @apply py-20 px-24 rounded-16 bg-russianViolet;
             @apply flex flex-col;
 
             h4 {
@@ -74,8 +73,7 @@
                 }
             }
         }
-        background: #302b42;
-        @apply py-16 px-32 rounded-16;
+        @apply py-16 px-32 rounded-16 bg-russianViolet;
         @apply text-18 font-normal leading-150;
 
         summary {
