--- a/app/views/tracks/community_solutions/show.html.haml
+++ b/app/views/tracks/community_solutions/show.html.haml
@@ -19,7 +19,12 @@
         .seperator /
         = link_to "Community Solutions", track_exercise_solutions_path(@track, @exercise)
         .seperator /
-        .exercise-title #{@own_solution ? 'Your' : "#{@author.handle}'s"} solution
+        .exercise-title.flex
+          - if @own_solution
+            Your solution
+          - else
+            #{render(ViewComponents::HandleWithFlair.new(@author.handle, @author.flair, size: :small))}'s solution
+
 
     .content.lg-container.flex.flex-col.lg:flex-row.lg:items-center
       = track_icon @track
@@ -35,10 +40,10 @@
             - if @own_solution
               Your
             - elsif @author.profile
-              = link_to "#{@author.handle}'s", profile_path(@author)
+              = link_to profile_path(@author), class: 'flex' do
+                #{render(ViewComponents::HandleWithFlair.new(@author.handle, @author.flair, size: :xlarge))}'s solution
             - else
-              #{@author.handle}'s
-            solution
+              #{render(ViewComponents::HandleWithFlair.new(@author.handle, @author.flair, size: :xlarge))}'s solution
             = render ViewComponents::Reputation.new(@author.formatted_reputation, size: :small, flashy: true)
           .to
             to
