Add accessibility-dark theme

--- a/app/css/components/header-with-bg.css
+++ b/app/css/components/header-with-bg.css
@@ -1,4 +1,5 @@
-.theme-light {
+.theme-light,
+.theme-accessibility-dark {
     .c-header-with-bg {
         background: linear-gradient(
                 180deg,
