--- a/app/css/pages/community.css
+++ b/app/css/pages/community.css
@@ -1,5 +1,6 @@
 #page-community {
-    .theme-light {
+    .theme-light,
+    .theme-accessibility-dark {
         --headerBackground: linear-gradient(
                 180deg,
                 rgba(251, 251, 255, 0) 79.36%,
