--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -87,7 +87,7 @@
 
       - if current_user.challenges.exists?
         .flex.flex-col.items-start.mb-28
-          .text-purple.font-semibold.leading-150.flex.items-center.mb-4
+          .text-adaptivePurple.font-semibold.leading-150.flex.items-center.mb-4
             %span.emoji.mr-6 📆
             Month 4 of #12in23
           %h2.text-h3 It's Mindshifting May!
