--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -300,6 +300,11 @@
     --hljs-hue-6: #986801;
     --hljs-hue-6-2: #c18401;
 
+    --diffDarkGreen: #a9e7c8;
+    --diffLightGreen: #e5f8ee;
+    --diffDarkRed: #f5adad;
+    --diffLightRed: #fce6e6;
+
     /* https://codepen.io/sosuke/pen/Pjoqqp */
     --notifications-active-filter: invert(76%) sepia(54%) saturate(3406%)
         hue-rotate(349deg) brightness(92%) contrast(111%);
@@ -515,6 +520,11 @@
     --hljs-hue-5-2: #be5046;
     --hljs-hue-6: #d19a66;
     --hljs-hue-6-2: #e6c07b;
+
+    --diffDarkGreen: #4fcda7;
+    --diffLightGreen: #4fcda726;
+    --diffDarkRed: #f17070;
+    --diffLightRed: #f1707026;
 
     --commonBadge-RGB: 240, 243, 249;
     --commonBadgeFill-RGB: 80, 83, 89;
