--- a/app/css/pages/editor.css
+++ b/app/css/pages/editor.css
@@ -303,6 +303,11 @@
                 height: 100%;
             }
 
+            #panel-instructions,
+            #panel-chatgpt {
+                @apply border-t-1 border-borderColor7 pt-16;
+            }
+
             section.feedback-pane {
                 @apply pb-16 px-24;
 
@@ -355,8 +360,10 @@
                     }
                 }
                 & .instructions {
-                    @apply pt-16;
-                    @apply border-t-1 border-borderColor6;
+                    &:not-first-child {
+                        @apply pt-16;
+                        @apply border-t-1 border-borderColor6;
+                    }
                 }
                 & .debug-info {
                     @apply border-t-2 border-borderColor6;
