--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -1,3 +1,5 @@
+- return "WAHOO YOU'RE AN INSIDER!!!!" if current_user.insider?
+
 #page-insiders
   .lg-container
     .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
